feat: race, ethnicity, and gender patient search parameters (#1006)
